--- a/style.css
+++ b/style.css
@@ -8,25 +8,22 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, em, img, strong, var, ol, u
 	vertical-align: baseline;
     list-style: none;
     text-decoration: none;
-    color: #000;
+    color: #fff;
 }
 
-body div{
-    background-color: teal;
-    border: solid 1px tomato;
-}
+
 
 
 
 .container{
-    /* margin: 0 auto; */
-    width: 1200px;
-    height: 900px;
+    margin: 0 auto;
+    width: 100vw;
+    height: 100vh;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     grid-template-rows: 5% repeat(3, 1fr);
-    gap: 50px 10px;
-    background-color: grey;
+    gap: 50px 0;
+    background-color: #120226;
 }
 
 .cabecalho{
@@ -39,11 +36,11 @@ body div{
 .principal{
     display: flex;
     flex-flow: column wrap;
-    border-color: #000;
+    align-content: space-between;
     grid-column-start: 2;
-    grid-column-end: 4;
+    grid-column-end: 5;
     grid-row-start: 2;
-    grid-row-end: 5;
+    grid-row-end: 6;
 }
 
 .cards_grandes{
@@ -53,14 +50,13 @@ body div{
     grid-row-end: 3; */
     width: 100%;
     height: 30%;
-    background-color: yellowgreen;
+    background-color: rgb(85, 85, 85);
 }
 
 .cards_pequenos{
-    margin-top: 7%;
     height: 60%;
     display: flex;
-    border: solid 10px blue;
+    
 }
 
 .views{
@@ -70,7 +66,7 @@ body div{
     grid-row-end: 3; */
     width: 50%;
     height: 100%;
-    background-color: yellow;
+    background-color: grey;
 }
 
 .tracks{
@@ -80,13 +76,13 @@ body div{
     grid-row-end: 3; */
     width: 50%;
     height: 100%;
-    background-color: yellow;
+    background-color: grey;
 }
 
 .perfil{
-    margin-right: 100px;
+    background-color: #050014;
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 1;
-    grid-row-end: 5;
+    grid-row-end: 6;
 }
